--- a/pages/index.css
+++ b/pages/index.css
@@ -45,6 +45,15 @@
     border-radius: 10px;
     padding: 34px 36px;
     position: relative;
+    box-sizing: border-box;
+}
+
+
+@media screen and (max-width: 767px) {
+    .popup__container {
+        padding: 25px 22px;
+        max-width: 88.1%;
+    }
 }
 
 .popup__close-icon {
