--- a/pages/index.css
+++ b/pages/index.css
@@ -21,118 +21,11 @@
 @import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
-
-.popup {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    display: none;
-}
-
-.popup__container {
-    width: 430px;
-    display: flex;
-    flex-direction: column;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    padding: 34px 36px;
-    position: relative;
-    box-sizing: border-box;
-}
-
-
-@media screen and (max-width: 767px) {
-    .popup__container {
-        padding: 25px 22px;
-        max-width: 88.1%;
-    }
-}
-
-.popup__close-icon {
-    background-image: url(../image/close_icon.png);
-    background-size: cover;
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    right: -40px;
-    top: -40px;
-    cursor: pointer;
-}
-
-.popup_opened {
-    display: flex;
-}
-
-.popup__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    color: #000000;
-    margin-bottom: 54px;
-}
-
-@media screen and (max-width: 767px) {
-    .popup__title {
-        font-size: 18px;
-        line-height: 22px
-    }
-}
-
-.popup__input {
-    width: 100%;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    display: flex;
-    margin-bottom: 30px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    outline: none;
-    color: #000000;
-}
-
-.popup__form {
-    display: flex;
-    flex-direction: column;
-}
-
-.popup__button {
-    display: flex;
-    background: #000000;
-    border-radius: 2px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    color: #FFFFFF;
-    height: 50px;
-    line-height: 50px;
-    justify-content: center;
-    margin-top: 32px;
-    align-items: center;
-    outline: none;
-}
-
-@media screen and (max-width: 767px) {
-    .popup__button {
-        font-size: 14px;
-        line-height: 17px;
-    }
-}
-
-
-.popup__button:hover {
-    opacity: 0.8;
-}
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__close-icon/popup__close-icon.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__button/popup__button.css);
