--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     padding: 67px 15% 60px;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
