--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -10,6 +10,6 @@
 @media screen and (max-width: 767px) {
     .popup__title {
         font-size: 18px;
-        line-height: 22px
+        line-height: 22px;
     }
 }
