--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
     transition: all .1s linear;
     align-self: center;
-    grid-area: edit-button
+    grid-area: edit-button;
 }
 
 @media screen and (max-width: 767px) {
