--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -22,6 +22,6 @@
 @media screen and (max-width: 767px) {
     .profile__job {
         font-size: 14px;
-        line-height: 17px
+        line-height: 17px;
     }
 }
