--- a/font/inter.css
+++ b/font/inter.css
@@ -1,23 +1,20 @@
 @font-face {
-    font-family: "Inter";
-    font-style: normal;
+    font-family: 'Inter';
+    src: url(inter/Inter-Medium.woff2) format('woff2'),
+        url(inter/Inter-Medium.woff) format('woff');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url(inter/Inter-Regular.woff2) format('woff2'),
+        url(inter/Inter-Regular.woff) format('woff');
     font-weight: 400;
-    font-display: swap;
-    src: url("Inter-Regular.woff2") format("woff2"), url("Inter-Regular.woff") format("woff");
 }
 
 @font-face {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url("Inter-Bold.woff2") format("woff2"), url("Inter-Bold.woff") format("woff");
-}
-
-@font-face {
-    font-family: "Inter";
-    font-style: normal;
+    font-family: 'Inter';
+    src: url(inter/Inter-Black.woff2) format('woff2'),
+        url(inter/Inter-Black.woff) format('woff');
     font-weight: 900;
-    font-display: swap;
-    src: url("Inter-Black.woff2") format("woff2"), url("Inter-Black.woff") format("woff");
 }
