--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,4 +1,6 @@
 .footer__author {
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
