--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,6 +1,8 @@
 .profile__job {
     max-width: 500px;
     word-wrap: break-word;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
