--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,6 +5,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     display: flex;
     margin-bottom: 30px;
+    font-family: Inter, Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
