--- a/font/inter.css
+++ b/font/inter.css
@@ -1,20 +1,29 @@
 @font-face {
-    font-family: 'Inter';
-    src: url(inter/Inter-Medium.woff2) format('woff2'),
-        url(inter/Inter-Medium.woff) format('woff');
+    font-family: "Inter";
+    font-style: normal;
+    font-display: swap;
     font-weight: 500;
+    src: url("Inter-Medium.woff2") format("woff2"),
+        url("Inter-Medium.woff") format("woff");
+
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url(inter/Inter-Regular.woff2) format('woff2'),
-        url(inter/Inter-Regular.woff) format('woff');
+    font-family: "Inter";
+    font-style: normal;
+    font-display: swap;
     font-weight: 400;
+    src: url("Inter-Regular.woff2") format("woff2"),
+        url("Inter-Regular.woff") format("woff");
+
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url(inter/Inter-Black.woff2) format('woff2'),
-        url(inter/Inter-Black.woff) format('woff');
+    font-family: "Inter";
+    font-style: normal;
+    font-display: swap;
     font-weight: 900;
+    src: url("Inter-Black.woff2") format("woff2"),
+        url("Inter-Black.woff") format("woff");
+
 }
