--- a/blocks/elements/__list-item/elements__list-item.css
+++ b/blocks/elements/__list-item/elements__list-item.css
@@ -3,6 +3,7 @@
     font-style: normal;
     font-weight: 900;
     width: 282px;
+    object-fit: cover;
     border-radius: 10px;
     border: none;
     padding: 0;
