--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,9 @@
     width: 142px;
     border-style: none;
 }
+
+@media screen and (max-width: 425px) {
+    .header__logo {
+        width: 103px;
+    }
+}
