--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -1,11 +1,25 @@
 .popup__close-icon {
-    background-image: url(../../../image/Close-Icon.png);
+    background: transparent url(../../../images/Close\ Icon1.svg);
     background-size: cover;
     width: 32px;
     height: 32px;
     position: absolute;
     right: -40px;
     top: -40px;
-    cursor: pointer;
     border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.popup__close-icon:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 600px) {
+    .popup__close-icon {
+        height: 20px;
+        right: 0;
+        top: -36px;
+        width: 20px;
+    }
 }
