--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,11 +6,14 @@
     line-height: 29px;
     color: #000000;
     margin-bottom: 54px;
+    margin-top: 0;
 }
 
 @media screen and (max-width: 767px) {
     .popup__title {
         font-size: 18px;
         line-height: 22px;
+        margin: 0;
+        margin-bottom: 75px;
     }
 }
