--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,7 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    background-color: transparent;
-    background-image: url(../../../image/Rectangle.png);
-    background-image: url(../../../image/Vector3.png);
+    background: transparent url(../../../images/Vector31.svg);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: 18px;
@@ -11,8 +9,13 @@
     border-radius: 2px;
     margin-left: auto;
     padding: 0;
-    transition: all 0.1s linear;
+    transition: 0.2s ease;
     box-sizing: border-box;
+    cursor: pointer;
+}
+
+.profile__add-button:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 1023px) {
