--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/elements/__container/elements__container.css);
 @import url(../blocks/elements/__text/elements__text.css);
 @import url(../blocks/elements/__like-container/elements__like-container.css);
+@import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/popup/popup.css);
