--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,12 +9,18 @@
     display: block;
     border: 0;
     border-bottom: 1px solid #545454;
+    opacity: 0.7;
     padding-top: 40px;
     box-sizing: border-box;
 }
 
 @media screen and (max-width: 1023px) {
     .header {
-        padding: 28px 27px 31px;
+        border-bottom: 1px solid rgba(84, 84, 84, .7);
+        padding: 28px 27px 31.6px;
+    }
+
+    .header::after {
+        display: none;
     }
 }
