--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,16 @@
 .popup {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.4s linear;
 }
