--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,8 @@
 @import url(../blocks/elements/__text/elements__text.css);
 @import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/elements/__image/elements__image.css);
+@import url(../blocks/elements/__remove/elements__remove.css);
+@import url(../blocks/elements/__like-container/_like/elements__like-container_like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/popup/popup.css);
@@ -30,3 +32,8 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/__image/popup-image__image.css);
+@import url(../blocks/popup-image/__title/popup-image__title.css);
+@import url(../blocks/popup-image/__close/popup-image__close.css);
