--- a/blocks/popup-image/__image/popup-image__image.css
+++ b/blocks/popup-image/__image/popup-image__image.css
@@ -1,5 +1,7 @@
 .popup-image__image {
-    width: 100%;
-    height: 50vh;
-    object-fit: contain;
+  width: 75vw;
+  height: 75vh;
+  max-width: 75vw;
+  max-height: 75vh;
+  object-fit: contain;
 }
