--- a/blocks/popup-image/__image/popup-image__image.css
+++ b/blocks/popup-image/__image/popup-image__image.css
@@ -4,4 +4,7 @@
   max-width: 75vw;
   max-height: 75vh;
   object-fit: contain;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center center;
 }
