--- a/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
+++ b/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
@@ -1,15 +1,31 @@
 .profile__avatar-edit {
-    padding: 0;
-    margin: 0 30px 0 0;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+  padding: 0;
+  margin: 0 30px 0 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.profile__avatar-edit:hover::after {
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../images/edit.svg);
+  background-repeat: no-repeat;
+  background-size: 26px 26px;
+  background-position: center center;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1023px) {
-    .profile__avatar-edit {
-        margin: 0 0 14px;
-    }
+  .profile__avatar-edit {
+    margin: 0 0 14px;
+  }
 }
