--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/elements/__list-item/elements__list-item.css);
 @import url(../blocks/elements/__container/elements__container.css);
 @import url(../blocks/elements/__text/elements__text.css);
+@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like-count/elements__like-count.css);
 @import url(../blocks/elements/__like-container/elements__like-container.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__remove/elements__remove.css);
